option java_outer_classname = "LCLastestLocationDataRes";

option java_package = "com.navinfo.opentsp.platform.location.protocol.dataaccess.terminal";

import "core/proto/webservice/originaldata/java/TerminalLocationData.proto";

message LastestLocationDataRes{
	required	int32			   statusCode  =1;
	optional	int32			 totalRecords  =2;
	repeated	TerminalLocationData	datas  =3;
}
