option java_outer_classname = "LCCANBusDataRecords";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.CANBUSData";

import "core/proto/terminal/CANBUSData/CANBUSDataReport.proto";

message CANBusDataRecords{
	required int32 statusCode = 1;
	optional int32 totalRecords = 2;
	repeated CANBUSDataReport records =3;
}
