option java_outer_classname = "LCTRSpeedCollect";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query.travelrecorder";

message TRSpeedCollect{
	required int64 startDate = 1;
	required int64 endDate = 2;
	optional int32 BlockNumber = 3;
}