option java_outer_classname = "LCGetTerminalInAreaRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.newstatisticsdata";


message GetTerminalInAreaRes{
	required int32			statusCode		=1;
	optional int32			totalRecords	=2;
	repeated int64	terminalIds	=3;
}