option java_outer_classname = "LCGetTerminalInDistrictRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.newstatisticsdata";


message GetTerminalInDistrictRes{
	required int32			statusCode		=1;
	optional int32			totalRecords	=2;
	repeated int64	terminalIds	=3;
}