option java_outer_classname = "LCGetTerminalLocationDataRes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.newstatisticsdata";

import "core/proto/common/java/LocationData.proto";

message GetTerminalLocationDataRes{
	required	 int32			statusCode		=1;
	optional 	 int32			totalRecords	=2;
	optional 	 int32			current			=3;
	optional 	 LocationData	locationData	=4;
}