option java_outer_classname = "LCLastestLocationDataByAlarmFilterRess";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.newstatisticsdata";

import "core/proto/webservice/originaldata/java/TerminalLocationData.proto";

message LastestLocationDataByAlarmFilterRes{
	required int32			statusCode		=1;
	optional int32			totalRecords	=2;
	repeated TerminalLocationData	datas	=3;
}